feat: using troop to manage items